--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,31 @@
-* {
+
+body{
   margin:0px;
   padding:0px;
-}
-
-#octocat {
-  display: block;
-  width:384px;
-  margin: 50px auto;
-}
-
-p,h1 {
-  display: block;
-  width: 400px;
+  
   margin: auto;
   font: 36px Monaco,"Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",monospace;
 }
 
-#frame{
-  width: 50px;
-  height: 50px;
+img{
   position: relative;
-  left: 30%;
-  margin: 50px auto;
+  display: flex;
+  left: 15%;
+  width: 70%;
+  height: auto;
+  border-radius: 50%;
+}
+
+.img{
+  border: 0px solid black;
+  border-radius: 10px;
+  background-color: rgb(109, 210, 148);
+}
+
+.lcont{
+  float: left;
+  left: 1px;
+  background-color: rgb(133, 149, 149);
+  width: 400px;
+  height:fit-content;
 }
