--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,20 @@
-
+html{
+  height: 100%;
+}
 body{
   margin:0px;
   padding:0px;
-  
-  margin: auto;
+  height: 100%;
   font: 36px Monaco,"Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",monospace;
 }
+
+.container{
+  width: 100%;
+  height: 100%;
+  background-color: rgb(67, 114, 114);
+}
+
+
 
 img{
   position: relative;
@@ -18,14 +27,55 @@ img{
 
 .img{
   border: 0px solid black;
-  border-radius: 10px;
+  border-end-end-radius:90%;
+  
   background-color: rgb(109, 210, 148);
 }
 
-.lcont{
+
+/* Vertical Navbar menu kısmı  */
+
+.menu{
+  display: block;
+  text-align: center;
+  color: white;
+
+}
+
+.navbar{
+  position:sticky;
   float: left;
   left: 1px;
   background-color: rgb(133, 149, 149);
-  width: 400px;
-  height:fit-content;
+  height: 100%;
+  width: 280px;
+  
+}
+
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 25%;
+  background-color: #f1f1f1;
+  position: fixed;
+  height: 100%;
+  overflow: auto;
+}
+
+li a {
+  display: block;
+  color: #000;
+  padding: 8px 16px;
+  text-decoration: none;
+}
+li a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+
+li a:hover:not(.active) {
+  background-color: #555;
+  color: white;
 }
