bs-body-vg changed

--- a/css/styles.css
+++ b/css/styles.css
@@ -61,7 +61,7 @@
   --bs-body-font-weight: 400;
   --bs-body-line-height: 1.5;
   --bs-body-color: #212529;
-  --bs-body-bg: #fff;
+  --bs-body-bg: rgb(243, 227, 227);
 }
 
 *,
